minimum viable product

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,13 @@
 
     <!-- dependencies -->
     <!-- START SOLUTION -->
-    <script src="bower_components/underscore/underscore-min.js"></script>
+    <script src="underscore/underscore-min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+
     <!-- END SOLUTION -->
     <!-- your scripts -->
-    <script src="env/config.js"></script>
+    <script src="env/config.example.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
